--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -196,6 +196,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 4\n",
+    "\n",
+    "A palindromic number reads the same both ways. The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 × 99.\n",
+    "\n",
+    "Find the largest palindrome made from the product of two 3-digit numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-31T18:54:06.640033Z",
+     "start_time": "2021-08-31T18:54:06.043648Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[993, 913]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_palindrome(val):\n",
+    "    \"\"\"Checks if an integer is a paindrome. Returns True or False.\n",
+    "    \"\"\"\n",
+    "    int_len = int(len(str(val)))\n",
+    "    is_pal = False\n",
+    "    \n",
+    "    # if length of val is even\n",
+    "    if int_len % 2 == 0:\n",
+    "        \n",
+    "        #print(str(val)[:int(int_len/2)])\n",
+    "        #print(str(val)[:int(int_len/2)-1:-1])\n",
+    "        \n",
+    "        if str(val)[:int(int_len/2)] == str(val)[:int(int_len/2)-1:-1]:\n",
+    "            is_pal = True\n",
+    "    \n",
+    "    # if length of val is odd\n",
+    "    else:\n",
+    "        #print(str(val)[:int((int_len-1)/2)])\n",
+    "        #print(str(val)[:int((int_len)/2):-1])\n",
+    "        \n",
+    "        if str(val)[:int((int_len-1)/2)] == str(val)[:int((int_len)/2):-1]:\n",
+    "            is_pal = True\n",
+    "        \n",
+    "    return is_pal\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "def largest_product_palindrome(num_digits=3):\n",
+    "    \"\"\"Finds the largest product of two integers with a specified number of\n",
+    "    digits, where the product is also a palindrome.\n",
+    "    \n",
+    "    Default number of digits is 3.\n",
+    "    \"\"\"\n",
+    "    if not type(num_digits) == int:\n",
+    "        print(\"`num_digits` must be an integer.\")\n",
+    "        return None\n",
+    "    \n",
+    "    largest = 0\n",
+    "    largest_factors = [0, 0]\n",
+    "    initial_limit = 0\n",
+    "    \n",
+    "    # i1 starts at 999 and goes to 100\n",
+    "    for i1 in range(int('9'*num_digits), int('9'*(num_digits - 1)), -1):\n",
+    "        \n",
+    "        # loop through all values for i2 until find first palindrome\n",
+    "        for i2 in range(int('9'*num_digits), int('9'*(num_digits - 1)), -1):\n",
+    "            \n",
+    "            test_prod = i1 * i2\n",
+    "        \n",
+    "            if is_palindrome(test_prod):\n",
+    "                \n",
+    "                # if this is the first one found\n",
+    "                if initial_limit == 0:\n",
+    "                    initial_limit = i2\n",
+    "                    largest = test_prod\n",
+    "                    largest_factors = [i1, i2]\n",
+    "                \n",
+    "                # if checking more permutations\n",
+    "                else:\n",
+    "                    \n",
+    "                    if test_prod > largest:\n",
+    "                        largest = test_prod\n",
+    "                        largest_factors = [i1, i2]\n",
+    "                    \n",
+    "        if i1 == initial_limit:\n",
+    "            print(largest_factors)\n",
+    "            return largest\n",
+    "                    \n",
+    "\n",
+    "largest_product_palindrome(3)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
